更新README文件，优化功能，修复已知问题。Updated README file, optimized functionality, and fixed known issues.
中文：
- 更新 README文件，按照统一格式编写。
- 优化 versionName，使用三位数字表示版本号。
- 优化 使用信号量(Semaphore)来处理线程间的同步问题，而不是使用忙等待(Thread.sleep())，优化应用程序的性能。
- 优化 使用lambda表达式替换对匿名内部类的方法重写(Override)。
- 修复 若歌曲文件的ID3标签本身就有问题，获取该歌曲的标签会导致应用程序闪退的问题。(感谢酷友 @路还要走 发现该问题！)
- 优化 添加、修改翻译文件。

English:
- Updated README file to follow a unified format.
- Optimized versionName to use a three-digit number for versioning.
- Optimized the use of Semaphores to handle thread synchronization issues instead of using busy waiting (Thread.sleep()), improving application performance.
- Optimized the use of lambda expressions to replace method overriding with anonymous inner classes.
- Fixed an issue where retrieving tags for a song would cause the application to crash if the ID3 tags of the song file itself were problematic. (Thanks to @路还要走 for spotting the problem!)
- Optimized the addition and modification of translation files.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -26,4 +26,5 @@
     <string name="appendLogPring">本次导出将追加到原有的“本地音乐导出.txt”文件。</string>
     <string name="overwriteLogPrint">已删除旧的“本地音乐导出.txt”文件。</string>
     <string name="progress">进度：</string>
+    <string name="failReadTag">" 获取标签失败。错误信息："</string>
 </resources>
