优化文字提示，修复已知问题。Optimise text alerts and fix known issues.
中文：
- 优化 若选择的目录不包含任何支持的音乐文件，现在将在主界面输出额外的提示文字。
- 尝试修复 无法读取TF卡中文件的问题（感谢酷友 @zz_xmy 发现该问题！）。

English:
- Optimisation If the selected directory does not contain any supported music files, additional alert text will now be output in the main interface.
- Trying to fix the problem of not being able to read files from TF card(Thanks to @zz_xmy for spotting the problem!).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="overwriteLogPrint">The old \"Local Music Export.txt\" file has been deleted.</string>
     <string name="progress">"Progress: "</string>
     <string name="failReadTag">" Get ID3 Tag failed. Error info:"</string>
+    <string name="ThisDirectoryDoNotHaveMusicFile">No music files in the selected directory.</string>
 </resources>
