--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,4 +27,5 @@
     <string name="overwriteLogPrint">已删除旧的“本地音乐导出.txt”文件。</string>
     <string name="progress">进度：</string>
     <string name="failReadTag">" 获取标签失败。错误信息："</string>
+    <string name="ThisDirectoryDoNotHaveMusicFile">所选目录下没有音乐文件。</string>
 </resources>
